--- a/app/src/main/res/layout/activity_join_step2.xml
+++ b/app/src/main/res/layout/activity_join_step2.xml
@@ -368,6 +368,23 @@
                 app:layout_constraintTop_toTopOf="@+id/activity_join_step2_img_pass_warning" />
 
             <TextView
+                android:id="@+id/activity_join_step2_tv_pass_valid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:lineSpacingExtra="1sp"
+                android:text="영문+숫자 최소 8자리 이상 입력해주세요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_pass_warning"
+                app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_pass_warning"
+                app:layout_constraintTop_toTopOf="@+id/activity_join_step2_img_pass_warning" />
+
+            <TextView
                 android:id="@+id/textView29"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
