[Implement Features] 회원가입 2단계 서버 제외 클라단 기능구현 완료

--- a/app/src/main/res/layout/activity_join_step2.xml
+++ b/app/src/main/res/layout/activity_join_step2.xml
@@ -205,6 +205,17 @@
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_email_warning"
                 app:layout_constraintTop_toTopOf="@id/activity_join_step2_img_email_warning" />
 
+            <ImageView
+                android:id="@+id/activity_join_step2_btn_email_erase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="17dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_et_email"
+                app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_email"
+                app:layout_constraintTop_toTopOf="@+id/activity_join_step2_et_email"
+                app:srcCompat="@drawable/join_step2_email_2_btn_erase" />
+
             <TextView
                 android:id="@+id/textView25"
                 android:layout_width="wrap_content"
@@ -384,6 +395,28 @@
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_pass_warning"
                 app:layout_constraintTop_toTopOf="@+id/activity_join_step2_img_pass_warning" />
 
+            <ImageView
+                android:id="@+id/activity_join_step2_btn_pass_erase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="17dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_et_pass"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/activity_join_step2_et_pass"
+                app:srcCompat="@drawable/join_step2_email_2_btn_erase" />
+
+            <ImageView
+                android:id="@+id/activity_join_step2_btn_passcheck_erase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="17dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_et_passcheck"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/activity_join_step2_et_passcheck"
+                app:srcCompat="@drawable/join_step2_email_2_btn_erase" />
+
             <TextView
                 android:id="@+id/textView29"
                 android:layout_width="wrap_content"
@@ -511,6 +544,17 @@
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_img_nickname_warning"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step2_img_nickname_warning"
                 app:layout_constraintTop_toTopOf="@+id/activity_join_step2_img_nickname_warning" />
+
+            <ImageView
+                android:id="@+id/activity_join_step2_btn_nickname_erase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="17dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_join_step2_et_nickname"
+                app:layout_constraintEnd_toEndOf="@+id/activity_join_step2_et_nickname"
+                app:layout_constraintTop_toTopOf="@+id/activity_join_step2_et_nickname"
+                app:srcCompat="@drawable/join_step2_email_2_btn_erase" />
 
             <ImageView
                 android:id="@+id/imageView10"
