--- a/app/src/main/res/layout/writing_sentence_step2.xml
+++ b/app/src/main/res/layout/writing_sentence_step2.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_left"
         android:layout_width="wrap_content"
@@ -33,11 +32,10 @@
         app:layout_constraintGuide_begin="26dp"
         android:orientation="horizontal"/>
 
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/writing_sentence_btn_cancel"
+        android:src="@drawable/btn_back"
         android:padding="16dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +53,7 @@
         app:layout_constraintTop_toTopOf="@id/gl_top"/>
 
     <ProgressBar
-        android:id="@+id/writing_sentence_step1_pgb"
+        android:id="@+id/writing_sentence_step2_pgb"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -73,114 +71,142 @@
         android:layout_width="9dp"
         android:layout_height="9dp"
         android:background="@drawable/dot_circle_gray"
-        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintEnd_toEndOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintStart_toStartOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
+        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step2_pgb"
+        app:layout_constraintEnd_toEndOf="@+id/writing_sentence_step2_pgb"
+        app:layout_constraintStart_toStartOf="@+id/writing_sentence_step2_pgb"
+        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step2_pgb" />
 
     <View
         android:id="@+id/view3"
         android:layout_width="9dp"
         android:layout_height="9dp"
         android:background="@drawable/dot_circle_gray"
-        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintEnd_toEndOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
+        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step2_pgb"
+        app:layout_constraintEnd_toEndOf="@+id/writing_sentence_step2_pgb"
+        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step2_pgb" />
 
     <View
-        android:id="@+id/writing_sentence_step1_pgb_out"
+        android:id="@+id/writing_sentence_step2_pgb_out"
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:background="@drawable/dot_circle_progressoff_out"
-        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_pgb"
+        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step2_pgb"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
-        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
+        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step2_pgb" />
 
     <View
-        android:id="@+id/writing_sentence_step1_pgb_in"
+        android:id="@+id/writing_sentence_step2_pgb_in"
         android:layout_width="12dp"
         android:layout_height="12dp"
         android:layout_marginStart="7dp"
         android:background="@drawable/dot_circle_progressoff_in"
-        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_pgb"
+        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step2_pgb"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
-        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
+        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step2_pgb" />
 
     <TextView
-        android:id="@+id/writing_sentence_step1_tv_1"
+        android:id="@+id/writing_sentence_step2_tv_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="19sp"
-        android:text="마음에 드는 "
-        android:textColor="@color/greyish_brown"
+        android:text="한 문장"
+        android:textColor="@color/soft_green"
         android:layout_marginTop="120dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
         />
     <TextView
-        android:id="@+id/writing_sentence_step1_tv_2"
+        android:id="@+id/writing_sentence_step2_tv_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="19sp"
-        android:textColor="@color/soft_green"
-        android:text="한 문장"
-        app:layout_constraintTop_toTopOf="@id/writing_sentence_step1_tv_1"
-        app:layout_constraintStart_toEndOf="@id/writing_sentence_step1_tv_1"
-        />
-    <TextView
-        android:id="@+id/writing_sentence_step1_tv_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="19sp"
-        android:text="을 적어주세요!"
         android:textColor="@color/greyish_brown"
-        app:layout_constraintTop_toTopOf="@id/writing_sentence_step1_tv_1"
-        app:layout_constraintStart_toEndOf="@+id/writing_sentence_step1_tv_2"
+        android:text="이 담긴 책을 추가해주세요!"
+        app:layout_constraintTop_toTopOf="@id/writing_sentence_step2_tv_1"
+        app:layout_constraintStart_toEndOf="@id/writing_sentence_step2_tv_1"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/gl_left"
+        app:layout_constraintBottom_toTopOf="@id/writing_sentence_step2_tv_title"
+        android:layout_marginBottom="12dp"
+        android:text="책 제목"
+        android:textSize="15sp"
+        android:textColor="@color/greyish_brown"/>
 
-    <EditText
-        android:id="@+id/writing_sentence_step1_et_sentence"
+    <TextView
+        android:id="@+id/writing_sentence_step2_tv_title"
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/et_area"
         android:maxLength="40"
         android:gravity="start"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="220dp"
         android:padding="16dp"
-        android:hint="최대 280자까지 입력 가능하며, 책의 문장을 임의로 변형하지 않게 주의해주세요!"
+        android:hint="책 제목을 검색해주세요."
         android:textSize="16sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="@+id/gl_left"
         app:layout_constraintEnd_toEndOf="@+id/gl_right"
-        >
-        <requestFocus />
-    </EditText>
+        />
 
     <TextView
-        android:id="@+id/writing_sentence_step1_tv_cnt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textSize="13sp"
-        android:textColor="@color/soft_green"
-        android:layout_marginTop="7dp"
-        app:layout_constraintEnd_toStartOf="@id/writing_sentence_step1_tv_cnt2"
-        app:layout_constraintTop_toBottomOf="@id/writing_sentence_step1_et_sentence"/>
+        app:layout_constraintStart_toStartOf="@id/gl_left"
+        app:layout_constraintBottom_toTopOf="@id/writing_sentence_step2_tv_author"
+        android:layout_marginBottom="12dp"
+        android:text="작가/옮긴이"
+        android:textSize="15sp"
+        android:textColor="@color/greyish_brown"/>
 
     <TextView
-        android:id="@+id/writing_sentence_step1_tv_cnt2"
-        android:layout_width="wrap_content"
+        android:id="@+id/writing_sentence_step2_tv_author"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="/40"
-        android:textColor="@color/very_light_pink_two"
-        android:textSize="13sp"
-        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_tv_cnt"
+        android:background="@drawable/et_area_grey"
+        android:maxLength="40"
+        android:gravity="start"
+        android:layout_marginTop="345dp"
+        android:padding="16dp"
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/gl_left"
         app:layout_constraintEnd_toEndOf="@+id/gl_right"
-        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_tv_cnt" />
+        />
 
     <TextView
-        android:id="@+id/writing_sentence_step1_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/gl_left"
+        app:layout_constraintBottom_toTopOf="@id/writing_sentence_step2_tv_publisher"
+        android:layout_marginBottom="12dp"
+        android:text="출판사"
+        android:textSize="15sp"
+        android:textColor="@color/greyish_brown"/>
+
+    <TextView
+        android:id="@+id/writing_sentence_step2_tv_publisher"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/et_area_grey"
+        android:maxLength="40"
+        android:gravity="start"
+        android:layout_marginTop="440dp"
+        android:padding="16dp"
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/gl_left"
+        app:layout_constraintEnd_toEndOf="@+id/gl_right"
+        />
+
+
+
+
+    <TextView
+        android:id="@+id/writing_sentence_step2_next"
         style="@android:style/ButtonBar"
         android:layout_width="0dp"
         android:layout_height="58dp"
@@ -192,5 +218,6 @@
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
         app:layout_constraintEnd_toEndOf="@id/gl_right"
         app:layout_constraintStart_toStartOf="@id/gl_left" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
