--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="white">#ffffff</color>
     <color name="white_0">#00ffffff</color>
     <color name="white_two">#f8f8f8</color>
+    <color name="white_three">#f7f7f7</color>
     <color name="reddish">#cf3232</color>
 </resources>
