--- a/app/src/main/res/layout/writing_sentence_step1.xml
+++ b/app/src/main/res/layout/writing_sentence_step1.xml
@@ -48,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="문장 쓰기"
+        android:textStyle="bold"
         android:textSize="19sp"
         android:textColor="@color/black_two"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,25 +70,6 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <View
-        android:id="@+id/view2"
-        android:layout_width="9dp"
-        android:layout_height="9dp"
-        android:background="@drawable/dot_circle_gray"
-        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintEnd_toEndOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintStart_toStartOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
-
-    <View
-        android:id="@+id/view3"
-        android:layout_width="9dp"
-        android:layout_height="9dp"
-        android:background="@drawable/dot_circle_gray"
-        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintEnd_toEndOf="@+id/writing_sentence_step1_pgb"
-        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
-
-    <View
         android:id="@+id/writing_sentence_step1_pgb_out"
         android:layout_width="26dp"
         android:layout_height="26dp"
@@ -106,12 +88,34 @@
         app:layout_constraintStart_toStartOf="@+id/gl_left"
         app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
 
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="9dp"
+        android:layout_height="9dp"
+        android:background="@drawable/dot_circle_gray"
+        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_pgb"
+        app:layout_constraintEnd_toEndOf="@+id/writing_sentence_step1_pgb"
+        app:layout_constraintStart_toStartOf="@+id/writing_sentence_step1_pgb"
+        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
+
+    <View
+        android:id="@+id/view3"
+        android:layout_width="9dp"
+        android:layout_height="9dp"
+        android:background="@drawable/dot_circle_gray"
+        app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_step1_pgb"
+        app:layout_constraintEnd_toEndOf="@+id/writing_sentence_step1_pgb"
+        app:layout_constraintTop_toTopOf="@+id/writing_sentence_step1_pgb" />
+
+
     <TextView
         android:id="@+id/writing_sentence_step1_tv_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:text="마음에 드는 "
+        android:textStyle="bold"
         android:textColor="@color/greyish_brown"
         android:layout_marginTop="120dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -124,6 +128,7 @@
         android:textSize="19sp"
         android:textColor="@color/soft_green"
         android:text="한 문장"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="@id/writing_sentence_step1_tv_1"
         app:layout_constraintStart_toEndOf="@id/writing_sentence_step1_tv_1"
         />
@@ -133,6 +138,7 @@
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:text="을 적어주세요!"
+        android:textStyle="bold"
         android:textColor="@color/greyish_brown"
         app:layout_constraintTop_toTopOf="@id/writing_sentence_step1_tv_1"
         app:layout_constraintStart_toEndOf="@+id/writing_sentence_step1_tv_2"
@@ -187,6 +193,7 @@
         android:background="@drawable/btn_green"
         android:gravity="center"
         android:text="다음"
+        android:textStyle="bold"
         android:textColor="@color/white"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@id/gl_bottom"
