--- a/app/src/main/res/layout/writing_sentence_book_no_result.xml
+++ b/app/src/main/res/layout/writing_sentence_book_no_result.xml
@@ -33,7 +33,7 @@
         android:orientation="horizontal"/>
 
     <ImageView
-        android:id="@+id/writing_sentence_book_search_search_btn_out"
+        android:id="@+id/writing_sentence_book_no_result_btn_out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/writing_sentence_btn_cancel"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toTopOf="@id/gl_top"/>
 
     <EditText
-        android:id="@+id/writing_sentence_book_search_et_search"
+        android:id="@+id/writing_sentence_book_no_result_et_search"
         android:layout_width="0dp"
         android:layout_height="46dp"
         android:background="@drawable/et_area"
@@ -72,70 +72,61 @@
     </EditText>
 
     <ImageView
-        android:id="@+id/writing_sentence_book_search_search_btn_search"
+        android:id="@+id/writing_sentence_book_no_result_btn_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btn_search"
         android:padding="13dp"
-        app:layout_constraintTop_toTopOf="@id/writing_sentence_book_search_et_search"
-        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_book_search_et_search"
-        app:layout_constraintEnd_toEndOf="@id/writing_sentence_book_search_et_search"
-       />
+        app:layout_constraintTop_toTopOf="@id/writing_sentence_book_no_result_et_search"
+        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_book_no_result_et_search"
+        app:layout_constraintEnd_toEndOf="@id/writing_sentence_book_no_result_et_search"
+        />
 
     <ImageView
-        android:id="@+id/writing_sentence_book_search_search_btn_delete"
+        android:id="@+id/writing_sentence_book_no_result_btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="8dp"
         android:paddingVertical="14dp"
         android:src="@drawable/writing_sentence_theme_6_error_btn_erase"
-        app:layout_constraintEnd_toStartOf="@id/writing_sentence_book_search_search_btn_search"
-        app:layout_constraintTop_toTopOf="@id/writing_sentence_book_search_et_search"
-        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_book_search_et_search"/>
+        app:layout_constraintEnd_toStartOf="@id/writing_sentence_book_no_result_btn_search"
+        app:layout_constraintTop_toTopOf="@id/writing_sentence_book_no_result_et_search"
+        app:layout_constraintBottom_toBottomOf="@id/writing_sentence_book_no_result_et_search"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        android:gravity="center">
 
-        <TextView
-            android:id="@+id/writing_sentence_book_search_search_tv_cnt"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
-            android:textSize="13sp"
-            android:textColor="@color/soft_green"
-            android:layout_marginTop="128dp"
-            app:layout_constraintEnd_toStartOf="@id/writing_sentence_book_search_search_tv_cnt2"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:src="@drawable/ic_empty2"/>
 
         <TextView
-            android:id="@+id/writing_sentence_book_search_search_tv_cnt2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="/40"
+            android:layout_marginTop="16dp"
+            android:text="검색 결과가 없습니다."
+            android:textColor="@color/black"
+            android:textSize="19sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다른 키워드로 검색해보세요!"
             android:textColor="@color/very_light_pink_two"
-            android:textSize="13sp"
-            app:layout_constraintEnd_toEndOf="@id/gl_right"
-            app:layout_constraintTop_toTopOf="writing_sentence_book_search_search_tv_cnt"
-            app:layout_constraintBottom_toBottomOf="@+id/writing_sentence_book_search_search_tv_cnt"/>
+            android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="157dp"
-            app:layout_constraintStart_toStartOf="@id/gl_left"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@color/very_light_pink_two"
-            android:text="• 40자 이내로 검색해주세요"
-            android:textSize="14sp"
-            />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="182dp"
-            app:layout_constraintStart_toStartOf="@id/gl_left"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@color/very_light_pink_two"
-            android:text="• 책 제목의 일부만 입력해도 책을 찾을 수 있어요\n      예) 해리포터와 불의 잔 → 해리"
-            android:textSize="14sp"
-            />
+
+    </LinearLayout>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
