[hayoung] 관련 파일 모두 옮김.

--- a/app/src/main/res/layout/item_library_curator.xml
+++ b/app/src/main/res/layout/item_library_curator.xml
@@ -121,7 +121,7 @@
             android:background="@drawable/btn_subscribe"
             android:button="@null"
             android:gravity="center"
-            android:text="@string/subscribe"
+            android:text="구독"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:includeFontPadding="false"
             android:textColor="#ffffff"
