--- a/app/src/main/res/layout/item_main_now_hot_curator.xml
+++ b/app/src/main/res/layout/item_main_now_hot_curator.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="17dp"
         android:layout_marginTop="11dp"
         android:layout_marginEnd="18dp"
-        android:src="@color/brownGrey"
+        android:src="@color/brown_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +27,7 @@
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="-1sp"
         android:text="예스리"
-        android:textColor="@color/brownGrey2"
+        android:textColor="@color/brown_grey_two"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/img_now_hot_curator"
         app:layout_constraintStart_toStartOf="@+id/img_now_hot_curator"
@@ -46,7 +46,7 @@
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="1sp"
         android:text="직장인의 비애"
-        android:textColor="@color/veryLightPink2"
+        android:textColor="@color/very_light_pink_two"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
