--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -59,7 +59,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginTop="17dp"
-                    android:src="@drawable/mongly_ballon"
+                    android:background="@drawable/ic_launcher_background"
                     app:layout_constraintBottom_toTopOf="@id/tx_library_username"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
