--- a/app/src/main/res/layout/writing_sentence_theme_no_result.xml
+++ b/app/src/main/res/layout/writing_sentence_theme_no_result.xml
@@ -105,7 +105,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_empty2"/>
+            android:src="@drawable/ic_search_empty2"/>
 
         <TextView
             android:layout_width="wrap_content"
