--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -11,13 +11,11 @@
         android:id="@+id/tv_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="9sp"
+        android:layout_marginTop="20dp"
+        android:letterSpacing="-0.04"
         android:text="설정"
         android:textColor="#292929"
         android:textSize="19sp"
-        app:layout_constraintBottom_toTopOf="@+id/activity_setting_btn_profile_update"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -33,129 +31,268 @@
         app:layout_constraintRight_toLeftOf="@id/tv_setting"
         app:layout_constraintTop_toTopOf="@id/tv_setting" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/activity_setting_btn_profile_update"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_personal_info"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_setting">
-
-        <TextView
-            android:id="@+id/tv_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:layout_marginBottom="19dp"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="8sp"
-            android:text="프로필 수정"
-            android:textColor="#292929"
-            android:textSize="17sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/img_btn_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
-            android:src="@drawable/my_settings_ic_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/line_setting1"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#e7e7e7"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/activity_setting_btn_app_setting"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_setting_btn_profile_update">
-
-        <TextView
-            android:id="@+id/tv_app_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="19dp"
-            android:layout_marginBottom="19dp"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="8sp"
-            android:text="앱정보"
-            android:textColor="#292929"
-            android:textSize="17sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_chainStyle="spread_inside"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/img_btn_profile2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
-            android:src="@drawable/my_settings_ic_arrow"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/line_setting2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#e7e7e7"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        android:text="개인 정보"
+        android:textColor="#838383"
+        android:textSize="15sp"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="39dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting" />
 
     <TextView
-        android:id="@+id/tv_logout"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_change_profile"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="81dp"
-        android:gravity="left"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="8sp"
-        android:paddingTop="19dp"
-        android:text="로그아웃"
-        android:textColor="#a7a7a7"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@id/getout"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_setting_btn_app_setting"
-        app:layout_constraintVertical_chainStyle="packed" />
+        android:text="프로필 수정"
+        android:textColor="@color/black_two"
+        android:textSize="17sp"
+        android:layout_marginTop="11dp"
+        android:letterSpacing="-0.04"
+        app:layout_constraintTop_toBottomOf="@id/tv_personal_info"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:id="@+id/getout"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_setting_account"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="left"
-        android:letterSpacing="-0.02"
-        android:lineSpacingExtra="8sp"
-        android:paddingBottom="22dp"
-        android:text="회원 탈퇴"
-        android:textColor="#a7a7a7"
-        android:textSize="16sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="계정 설정"
+        android:textSize="17sp"
+        android:textColor="@color/black_two"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_change_profile"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_setting_push"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="푸쉬 알림 설정"
+        android:textSize="17sp"
+        android:textColor="@color/black_two"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_account"
+        app:layout_constraintLeft_toLeftOf="parent" />
+    
+    <View
+        android:id="@+id/view_setting_line_1"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="24dp"
+        android:background="#e7e7e7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_push" />
+
+    <TextView
+        android:id="@+id/tv_cs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="문의"
+        android:textColor="#838383"
+        android:textSize="15sp"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="27dp"
+        app:layout_constraintTop_toBottomOf="@id/view_setting_line_1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_cs_one"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1:1 문의하기"
+        android:textColor="@color/black_two"
+        android:textSize="17sp"
+        android:layout_marginTop="13dp"
+        android:letterSpacing="-0.04"
+        app:layout_constraintTop_toBottomOf="@id/tv_cs"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_cs_problem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="문제 신고하기"
+        android:textSize="17sp"
+        android:textColor="@color/black_two"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_cs_one"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <View
+        android:id="@+id/view_setting_line_2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="23dp"
+        android:background="#e7e7e7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_cs_problem" />
+
+    <TextView
+        android:id="@+id/tv_setting_info_app"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="앱 정보"
+        android:textColor="#838383"
+        android:textSize="15sp"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="29dp"
+        app:layout_constraintTop_toBottomOf="@id/view_setting_line_2"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_setting_info_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="버전 정보"
+        android:textColor="@color/black_two"
+        android:textSize="17sp"
+        android:layout_marginTop="13dp"
+        android:letterSpacing="-0.04"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_info_app"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_setting_info_developer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="개발자 정보"
+        android:textSize="17sp"
+        android:textColor="@color/black_two"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_info_version"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_setting_info_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="서비스 운영정책"
+        android:textSize="17sp"
+        android:textColor="@color/black_two"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_info_developer"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_setting_privacy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="개인정보 처리방침"
+        android:textSize="17sp"
+        android:textColor="@color/black_two"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_info_service"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_setting_opensource"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="오픈소스 라이선스"
+        android:textSize="17sp"
+        android:textColor="@color/black_two"
+        android:letterSpacing="-0.04"
+        android:layout_marginTop="13dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_setting_privacy"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_logout" />
+        app:layout_constraintTop_toTopOf="@id/tv_change_profile"
+        app:layout_constraintBottom_toBottomOf="@id/tv_change_profile" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_setting_account"
+        app:layout_constraintBottom_toBottomOf="@id/tv_setting_account" />
+
+    <com.kyleduo.switchbutton.SwitchButton
+        android:id="@+id/sb_setting_push"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:kswThumbColor="#ffffff"
+        app:kswBackRadius="20dp"
+        app:kswBackColor="@color/switch_button_state"
+        app:kswFadeBack="true"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_setting_push"
+        app:layout_constraintBottom_toBottomOf="@id/tv_setting_push"/>
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_cs_one"
+        app:layout_constraintBottom_toBottomOf="@id/tv_cs_one" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_cs_problem"
+        app:layout_constraintBottom_toBottomOf="@id/tv_cs_problem" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_setting_info_version"
+        app:layout_constraintBottom_toBottomOf="@id/tv_setting_info_version" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_setting_info_developer"
+        app:layout_constraintBottom_toBottomOf="@id/tv_setting_info_developer" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_setting_info_service"
+        app:layout_constraintBottom_toBottomOf="@id/tv_setting_info_service" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_setting_privacy"
+        app:layout_constraintBottom_toBottomOf="@id/tv_setting_privacy" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/btn_next"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_setting_opensource"
+        app:layout_constraintBottom_toBottomOf="@id/tv_setting_opensource" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
