--- a/app/src/main/res/layout/activity_writing_sentence.xml
+++ b/app/src/main/res/layout/activity_writing_sentence.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".activity.WritingSentenceActivity">
 
+    <fragment
+        android:id="@+id/nav_host"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_writing_sentence"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
