--- a/app/src/main/res/layout/writing_sentence_finish.xml
+++ b/app/src/main/res/layout/writing_sentence_finish.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".fragment.WritingSentenceFinishFragment">
 
     <ImageView
         android:layout_width="260dp"
@@ -38,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/activity_writing_sentence_btn_sentence"
+        android:id="@+id/writing_sentence_finish_btn_sentence"
         android:layout_width="240dp"
         android:layout_height="45dp"
         android:background="@drawable/btn_green"
@@ -52,7 +54,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/activity_writing_sentence_btn_main"
+        android:id="@+id/writing_sentence_finish_btn_main"
         android:layout_width="240dp"
         android:layout_height="45dp"
         android:background="@drawable/btn_white"
