--- a/app/src/main/res/layout/dialog_writing_theme_check.xml
+++ b/app/src/main/res/layout/dialog_writing_theme_check.xml
@@ -72,8 +72,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/textView34"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:layout_marginBottom="130dp"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:gravity="center_horizontal"
             android:includeFontPadding="false"
@@ -82,11 +85,9 @@
             android:text="테마를 등록하시겠어요?"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:layout_marginBottom="130dp"
-            android:layout_marginTop="22dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dialog_writing_theme_check_tv_title" />
 
         <TextView
@@ -100,10 +101,10 @@
             android:text="테마는 한 번 등록하면\n수정 및 삭제를 할 수 없어요!"
             android:textColor="#a7a7a7"
             android:textSize="14sp"
-            android:layout_marginTop="180dp"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView34" />
 
         <TextView
             android:id="@+id/dialog_writing_theme_check_yes"
