--- a/app/src/main/res/layout/writing_sentence_step2.xml
+++ b/app/src/main/res/layout/writing_sentence_step2.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".fragment.WritingSentenceStep2Fragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_left"
@@ -33,6 +35,7 @@
         android:orientation="horizontal"/>
 
     <ImageView
+        android:id="@+id/writing_sentence_step2_btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btn_back"
@@ -223,7 +226,7 @@
 
 
     <TextView
-        android:id="@+id/writing_sentence_step2_next"
+        android:id="@+id/writing_sentence_step2_btn_next"
         style="@android:style/ButtonBar"
         android:layout_width="0dp"
         android:layout_height="58dp"
