--- a/app/src/main/res/navigation/nav_writing_sentence.xml
+++ b/app/src/main/res/navigation/nav_writing_sentence.xml
@@ -2,33 +2,70 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_writing_sentence">
+    android:id="@+id/nav_writing_sentence"
+    app:startDestination="@id/writing_sentence_step1_fragment">
 
 
 
 
     <fragment
-        android:id="@+id/writing_setp1_fg"
+        android:id="@+id/writing_sentence_step1_fragment"
         android:name="com.example.mongleandroid_release.fragment.WritingSentenceStep1Fragment"
         tools:layout="@layout/writing_sentence_step1">
         <action
-            android:id="@+id/action_writing_setp1_fg_to_writing_setp2_fg"
-            app:destination="@id/writing_setp2_fg" />
+            android:id="@+id/action_writing_step1_fg_to_writing_step2_fg"
+            app:destination="@id/writing_sentence_step2_fragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <fragment
-        android:id="@+id/writing_setp2_fg"
+        android:id="@+id/writing_sentence_step2_fragment"
         android:name="com.example.mongleandroid_release.fragment.WritingSentenceStep2Fragment"
         tools:layout="@layout/writing_sentence_step2">
         <action
-            android:id="@+id/action_writing_setp2_fg_to_writing_setp3_fg"
-            app:destination="@id/writing_setp3_fg" />
+            android:id="@+id/action_writing_step2_fg_to_writing_step3_fg"
+            app:destination="@id/writing_sentence_step3_fragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_writing_step2_fg_to_writing_step1_fg"
+            app:destination="@id/writing_sentence_step1_fragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
 
     <fragment
-        android:id="@+id/writing_setp3_fg"
+        android:id="@+id/writing_sentence_step3_fragment"
         android:name="com.example.mongleandroid_release.fragment.WritingSentenceStep3Fragment"
         tools:layout="@layout/writing_sentence_step3">
+        <action
+            android:id="@+id/action_writing_step3_fg_to_writing_step2_fg"
+            app:destination="@id/writing_sentence_step2_fragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_writing_step3_fg_to_writing_finish_fg"
+            app:destination="@id/writing_sentence_finish_fragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+    </fragment>
+
+    <fragment
+        android:id="@+id/writing_sentence_finish_fragment"
+        android:name="com.example.mongleandroid_release.fragment.WritingSentenceStep3Fragment"
+        tools:layout="@layout/writing_sentence_finish">
+
     </fragment>
 
 </navigation>
